--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -1,5 +1,34 @@
 [
     {
+        "version": "3.4.1-insiders",
+        "title": "Fiddler Everywhere v3.4.1",
+        "date": "August 30, 2022",
+        "items": [
+            {
+                "type": "New",
+                "entries": [
+                    {
+                        "title": "Inform macOS users for the new Apple Silicon build"
+                    }
+                ]
+            },
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "Applying body formatting in inspectors body view is delayed"
+                    },
+                    {
+                        "title": "Notification for app update takes a lot of time to show"
+                    },
+                    {
+                        "title": "Remove 'Detected unusual line terminators' notification from inspectors"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "3.4.0-insiders",
         "title": "Fiddler Everywhere v3.4.0",
         "date": "August 11, 2022",
