--- a/release-notes/release-notes.json
+++ b/release-notes/release-notes.json
@@ -651,13 +651,13 @@
                         "title": "When Fiddler Everywhere is unable to remove the proxy settings from the machine, next start leads to blank screen with no error and no indication for the user how to proceed"
                     },
                     {
-                        "title": "Unmatched Requests Passthrough setting is saved immediately when changed while it should be saved when using the Save button of the Settings dialog"
+                        "title": "Unmatched Requests Passthrough setting is saved immediately when changed while it must be saved when using the Save button of the Settings dialog"
                     },
                     {
                         "title": "Expanded/collapsed states of rules is not persisted"
                     },
                     {
-                        "title": "Rules added to list are expanded by default, while they should be collapsed"
+                        "title": "Rules added to list are expanded by default, while they must be collapsed"
                     },
                     {
                         "title": "Rules tab breaks when the rules are on more than one page and all of the rules on the last page are deleted"
